--- a/html:css/cheatsheetHTML.html
+++ b/html:css/cheatsheetHTML.html
@@ -66,6 +66,18 @@
   <input type="radio"/>      = RADIO BUTTON CHECK BOX
 
 
+<input type="datetime-local">
+<input type="email">
+<input type="hidden">
+<input type="image">
+<input type="month">
+<input type="number">
+<input type="reset">
+<input type="tel">
+<input type="url">
+<input type="week">
+
+
 
 
   <select name="position" id="position">  = SELECTOR
